--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "firebase": "^10.14.1",
+    "lighthouse": "^12.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
